correct z-index in header

--- a/src/styles/_header.scss
+++ b/src/styles/_header.scss
@@ -150,6 +150,7 @@
       font-size: 46px;
       line-height: 40px;
       letter-spacing: -1px;
+      z-index: -1;
     }
 
     &__contact-toggler-label::before {
@@ -160,11 +161,11 @@
       display: block;
     }
 
-    &__contact-toggler:not(:checked) ~ .header__action {
+    &__contact-toggler:not(:checked) ~ &__action {
       display: none;
     }
 
-    &__contact-toggler:checked ~ .header__action {
+    &__contact-toggler:checked ~ &__action {
       top: 0;
       bottom: 0;
       left: 0;
@@ -194,15 +195,11 @@
       }
     }
 
-    &__contact-toggler:checked ~ .header__title {
-      z-index: -1;
-    }
-
-    &__contact-toggler:not(:checked) ~ .header__phone {
+    &__contact-toggler:not(:checked) ~ &__phone {
       display: none;
     }
 
-    &__contact-toggler:checked ~ .header__phone {
+    &__contact-toggler:checked ~ &__phone {
       top: 0;
       bottom: 0;
       left: 0;
@@ -217,7 +214,7 @@
       }
     }
 
-    &__contact-toggler:checked ~ .&__nav-toggler:checked ~ .&__phone {
+    &__contact-toggler:checked ~ &__nav-toggler:checked ~ &__phone {
       top: 0;
       bottom: 0;
       left: 0;
